Update More Research links in project page

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           More Research
         </a>
         <div class="navbar-dropdown">
-          <a class="navbar-item" href="#">
+          <a class="navbar-item" href="https://pengfeiren96.github.io/DIR/">
             Decoupled Iterative Refinement Framework for Interacting Hands Reconstruction from a Single RGB Image
           </a>
           <a class="navbar-item" href="https://zxz267.github.io/AvatarJLM/">
@@ -323,7 +323,7 @@
                alt="Ours vs. EpipolarPose and CanonPose."/>
         </div>
         <br>
-        <h3 class="title is-4">Ours vs. S2Hand</h3>
+        <h3 class="title is-4">Ours vs. S2Hand and OpenPose</h3>
         <div class="columns is-vcentered interpolation-panel">
           <img src="./static/images/results.jpg"
                class="interpolation-image"
