Add More Research Link

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
           <a class="navbar-item" href="https://zxz267.github.io/AvatarJLM/">
             Realistic Full-Body Tracking from Sparse Observations via Joint-Level Modeling
           </a>
+          <a class="navbar-item" href="https://zxz267.github.io/OHTA/">
+            OHTA: One-shot Hand Avatar via Data-driven Implicit Priors
+          </a>
         </div>
       </div>
     </div>
